# cloud-cost-analyzer

./: .env  .gitignore  ANONYMIZATION.md  ATTRIBUTION.md  CLAUDE.md  CLICKHOUSE.md  CLICKHOUSE_SETUP.md  DEPLOYMENT_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.dlt/: config.toml  config.toml.example  secrets.toml.example
.github/workflows/: README.md  clear-clickhouse.yml  etl-pipeline.yml
_prompts/: 2_claude_prompt_rill_setup.md  2_response_SETUP_SUMMARY.md  3_run_gh_clickhouse.md  4_claude_fix_missing_gcp_data.md  4_response_fix_missing_gcp_data.md  README.md
data_cost/aws_cost_schema.json/: aws_cur.schema.yaml  cloud_cost_analytics.schema.yaml  incremental_stripe_source.schema.yaml
data_cost/google_cost_schema.json/: bigquery_billing.schema.yaml
data_cost/stripe_cost_schema.json/: stripe_source.schema.yaml
export_schema/aws_cost_schema.json/: cloud_cost_analytics.schema.yaml  incremental_stripe_source.schema.yaml
export_schema/google_cost_schema.json/: cloud_cost_analytics.schema.yaml
helper_sqls/: gcp_breakdown_project_product.sql  gcp_total_cost.sql
pipelines/: __init__.py  aws_pipeline.py  google_bq_incremental_pipeline.py  incremental_load_bigquery.py  ingest_normalized_pipeline.py  stripe_pipeline.py
scripts/: README.md  anonymize_clickhouse.py  clear_clickhouse.py  clear_motherduck.py  generate_demo_data.py  init_clickhouse.py
tests/: test_duplicates.sql  test_duplicates_parquet.sql
viz_rill/: .env  .env.example  .gitignore  AWS_DASHBOARDS.md  README.md  rill.yaml  theme.yaml
(+168 files in other folders)
