[project]
name = "cloud-cost-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    #aws
    "dlt[duckdb,s3]>=1.18.2",
    "pyarrow>=22.0.0",
    #bigquery
    "dlt[duckdb]>=1.18.2",
    "google-cloud-bigquery>=3.38.0",
]
