[project]
name = "cloud-cost-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # all
    "dlt[parquet]>=1.18.2",
    #aws
    "dlt[s3]",
    "pyarrow>=22.0.0",
    #bigquery
    "google-cloud-bigquery>=3.38.0",
    # stripe
    "pandas>=2.0.0",
    "stripe>=5.0.0",
    # cur-wizard
    "duckdb>=1.4.2",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    #clickhouse
    "dlt[clickhouse]",
    "clickhouse-connect>=0.10.0",
    #motherduck
    "dlt[motherduck]",
]
